1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hapi-server-svc
spec:
  type: ClusterIP
  selector:
    app: hapi-server
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
