1.07/manifests/ingress.yaml
# Exercise 1.08: Project v0.5
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hapi-server-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hapi-server-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: hapi-server-pinpong-svc
                port:
                  number: 2345
